smaller title size and set max-width to 375px for smaller screens. Overflow-hidden to prevent scroll

--- a/style.css
+++ b/style.css
@@ -165,11 +165,21 @@ input[type="range"]::-moz-range-thumb {
   text-align: center;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 768px) {
   .container {
+    max-width: 375px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
+  }
+  .title1, 
+  .title2 {
+    font-size: 34px;
+  }
+
+  .separator {
+    max-width: 300px;
   }
 
   .passwords {
